--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.4"
+    "express-session": "^1.13.0",
+    "mongoose": "^4.4.4",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.0"
   },
   "devDependencies": {
     "concurrently": "^2.0.0"
