--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Squire-Shawn/Trip_App#readme",
   "dependencies": {
+    "aws-sdk": "^2.2.38",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
