--- a/public/package.json
+++ b/public/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.0",
-    "angular-ui-router": "^0.2.18"
+    "angular-cookies": "^1.5.0",
+    "angular-ui-router": "^0.2.18",
+    "ng-file-upload": "^12.0.1"
   }
 }
