--- a/public/package.json
+++ b/public/package.json
@@ -12,6 +12,7 @@
     "angular": "^1.5.0",
     "angular-cookies": "^1.5.0",
     "angular-ui-router": "^0.2.18",
+    "ng-cookies": "^1.0.2",
     "ng-file-upload": "^12.0.1"
   }
 }
